--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cara Menghubungi Customer Service (CS) Ajaib</title>
+
+  <!-- ✅ Google Site Verification -->
+  <meta name="google-site-verification" content="S4K7u9Sc3lmiolbiWF08ER8uTQt9heBFptim-lXESrs" />
+
+  <!-- SEO Meta -->
   <meta name="description" content="Hubungi Customer Service Ajaib lewat chat aplikasi, email, telepon, WhatsApp, atau media sosial. Bantuan cepat & responsif untuk pengguna Ajaib.">
   <meta name="keywords" content="ajaib, customer service ajaib, cs ajaib, kontak ajaib, hubungi ajaib, bantuan ajaib">
   <meta name="author" content="Ajaib Technologies">
